headers/IOTCAPIs.h


#define MAX_DEFAULT_IOTC_SESSION_NUMBER				128
#define MAX_DEFAULT_IOTC_SESSION_NUMBER				16
#define MAX_DEFAULT_IOTC_SESSION_NUMBER				128
#define MAX_DEFAULT_IOTC_SESSION_NUMBER				4
#define MAX_DEFAULT_IOTC_SESSION_NUMBER				8
#define IOTC_MAX_PACKET_SIZE						1400
#define MAX_CHANNEL_NUMBER							32
#define IOTC_SESSION_ALIVE_TIMEOUT					15
#define	IOTC_ER_NoERROR								0
#define	IOTC_ER_SERVER_NOT_RESPONSE					-1
#define	IOTC_ER_FAIL_RESOLVE_HOSTNAME				-2
#define IOTC_ER_ALREADY_INITIALIZED                 -3
#define IOTC_ER_FAIL_CREATE_MUTEX                   -4
#define IOTC_ER_FAIL_CREATE_THREAD                  -5
#define IOTC_ER_FAIL_CREATE_SOCKET                  -6
#define IOTC_ER_FAIL_SOCKET_OPT                     -7
#define IOTC_ER_FAIL_SOCKET_BIND                    -8
#define IOTC_ER_UNLICENSE                           -10
#define IOTC_ER_LOGIN_ALREADY_CALLED                -11
#define IOTC_ER_NOT_INITIALIZED                     -12
#define IOTC_ER_TIMEOUT                             -13
#define IOTC_ER_INVALID_SID                         -14
#define IOTC_ER_UNKNOWN_DEVICE                      -15
#define IOTC_ER_FAIL_GET_LOCAL_IP                   -16
#define IOTC_ER_LISTEN_ALREADY_CALLED               -17
#define IOTC_ER_EXCEED_MAX_SESSION                  -18
#define IOTC_ER_CAN_NOT_FIND_DEVICE                 -19
#define IOTC_ER_CONNECT_IS_CALLING                  -20
#define IOTC_ER_SESSION_CLOSE_BY_REMOTE             -22
#define IOTC_ER_REMOTE_TIMEOUT_DISCONNECT           -23
#define IOTC_ER_DEVICE_NOT_LISTENING                -24
#define IOTC_ER_CH_NOT_ON                           -26
#define IOTC_ER_FAIL_CONNECT_SEARCH                 -27
#define IOTC_ER_MASTER_TOO_FEW                      -28
#define IOTC_ER_AES_CERTIFY_FAIL                    -29
#define IOTC_ER_SESSION_NO_FREE_CHANNEL             -31
#define IOTC_ER_TCP_TRAVEL_FAILED					-32
#define IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED        -33
#define IOTC_ER_CLIENT_NOT_SECURE_MODE              -34
#define IOTC_ER_CLIENT_SECURE_MODE					-35
#define IOTC_ER_DEVICE_NOT_SECURE_MODE              -36
#define IOTC_ER_DEVICE_SECURE_MODE					-37
#define IOTC_ER_INVALID_MODE                        -38
#define IOTC_ER_EXIT_LISTEN                         -39
#define IOTC_ER_NO_PERMISSION                  		-40
#define	IOTC_ER_NETWORK_UNREACHABLE     			-41
#define IOTC_ER_FAIL_SETUP_RELAY					-42
#define IOTC_ER_NOT_SUPPORT_RELAY					-43
#define IOTC_ER_NO_SERVER_LIST						-44
#define IOTC_ER_DEVICE_MULTI_LOGIN					-45
#define IOTC_ER_INVALID_ARG                         -46
#define IOTC_ER_NOT_SUPPORT_PE			            -47
#define IOTC_ER_DEVICE_EXCEED_MAX_SESSION			-48
P2PAPI_API void IOTC_Get_Version(unsigned int *pnVersion);