headers/AVAPIs.h


#define AV_MAX_IOCTRL_DATA_SIZE					1024
#define AV_MAX_AUDIO_DATA_SIZE					1280
#define		AV_ER_NoERROR						 0
#define		AV_ER_INVALID_ARG					-20000
#define		AV_ER_BUFPARA_MAXSIZE_INSUFF		-20001
#define		AV_ER_EXCEED_MAX_CHANNEL			-20002
#define		AV_ER_MEM_INSUFF					-20003
#define		AV_ER_FAIL_CREATE_THREAD			-20004
#define 	AV_ER_EXCEED_MAX_ALARM				-20005
#define		AV_ER_EXCEED_MAX_SIZE				-20006
#define		AV_ER_SERV_NO_RESPONSE				-20007
#define		AV_ER_CLIENT_NO_AVLOGIN				-20008
#define		AV_ER_WRONG_VIEWACCorPWD			-20009
#define		AV_ER_INVALID_SID					-20010
#define		AV_ER_TIMEOUT						-20011
#define		AV_ER_DATA_NOREADY					-20012
#define		AV_ER_INCOMPLETE_FRAME				-20013
#define		AV_ER_LOSED_THIS_FRAME				-20014
#define		AV_ER_SESSION_CLOSE_BY_REMOTE		-20015
#define		AV_ER_REMOTE_TIMEOUT_DISCONNECT		-20016
#define		AV_ER_SERVER_EXIT		    		-20017
#define		AV_ER_CLIENT_EXIT		    		-20018
#define		AV_ER_NOT_INITIALIZED	    		-20019
#define		AV_ER_CLIENT_NOT_SUPPORT	   		-20020
#define		AV_ER_SENDIOCTRL_ALREADY_CALLED	   	-20021
#define		AV_ER_SENDIOCTRL_EXIT		    	-20022
#define		AV_ER_NO_PERMISSION                     -20023
#define		AV_ER_WRONG_ACCPWD_LENGTH              -20024
typedef enum
{
	IOTYPE_INNER_SND_DATA_DELAY = 0xFF,
	IOTYPE_USER_DEFINED_START = 0x100
} AVIOCtrlType;
typedef enum _AV_RESET_TARGET
{
	RESET_VIDEO = 0,
	RESET_AUDIO,
	RESET_ALL
} AV_RESET_TARGET;
typedef int (_stdcall *authFn)(char *szViewAccount,char *szViewPassword);
AVAPI_API int avGetAVApiVer(void);
AVAPI_API int avServResetBuffer(int avIndex, AV_RESET_TARGET eTarget, unsigned int Timeout_ms);
AVAPI_API int avInitialize(int nMaxChannelNum);
AVAPI_API int avDeInitialize(void);
AVAPI_API int  avServStart(int nIOTCSessionID, const char *cszViewAccount, const char *cszViewPassword, unsigned int nTimeout, unsigned int nServType, unsigned char nIOTCChannelID);
AVAPI_API int  avServStart2(int nIOTCSessionID, authFn pfxAuthFn, unsigned int nTimeout, unsigned int nServType, unsigned char nIOTCChannelID);
AVAPI_API void avServExit(int nIOTCSessionID, unsigned char nIOTCChannelID);
AVAPI_API void avServStop(int nAVChannelID);
AVAPI_API int  avSendFrameData(int nAVChannelID, const char *cabFrameData, int nFrameDataSize,
								const void *cabFrameInfo, int nFrameInfoSize);
AVAPI_API int  avClientStart(int nIOTCSessionID, const char *cszViewAccount, const char *cszViewPassword,
								unsigned int nTimeout,unsigned int *pnServType, unsigned char nIOTCChannelID);