src/bindings.rs

/* automatically generated by rust-bindgen 0.60.1 */

pub const AV_MAX_IOCTRL_DATA_SIZE: u32 = 1024;
pub const AV_MAX_AUDIO_DATA_SIZE: u32 = 1280;
pub const AV_ER_NoERROR: u32 = 0;
pub const AV_ER_INVALID_ARG: i32 = -20000;
pub const AV_ER_BUFPARA_MAXSIZE_INSUFF: i32 = -20001;
pub const AV_ER_EXCEED_MAX_CHANNEL: i32 = -20002;
pub const AV_ER_MEM_INSUFF: i32 = -20003;
pub const AV_ER_FAIL_CREATE_THREAD: i32 = -20004;
pub const AV_ER_EXCEED_MAX_ALARM: i32 = -20005;
pub const AV_ER_EXCEED_MAX_SIZE: i32 = -20006;
pub const AV_ER_SERV_NO_RESPONSE: i32 = -20007;
pub const AV_ER_CLIENT_NO_AVLOGIN: i32 = -20008;
pub const AV_ER_WRONG_VIEWACCorPWD: i32 = -20009;
pub const AV_ER_INVALID_SID: i32 = -20010;
pub const AV_ER_TIMEOUT: i32 = -20011;
pub const AV_ER_DATA_NOREADY: i32 = -20012;
pub const AV_ER_INCOMPLETE_FRAME: i32 = -20013;
pub const AV_ER_LOSED_THIS_FRAME: i32 = -20014;
pub const AV_ER_SESSION_CLOSE_BY_REMOTE: i32 = -20015;
pub const AV_ER_REMOTE_TIMEOUT_DISCONNECT: i32 = -20016;
pub const AV_ER_SERVER_EXIT: i32 = -20017;
pub const AV_ER_CLIENT_EXIT: i32 = -20018;
pub const AV_ER_NOT_INITIALIZED: i32 = -20019;
pub const AV_ER_CLIENT_NOT_SUPPORT: i32 = -20020;
pub const AV_ER_SENDIOCTRL_ALREADY_CALLED: i32 = -20021;
pub const AV_ER_SENDIOCTRL_EXIT: i32 = -20022;
pub const AV_ER_NO_PERMISSION: i32 = -20023;
pub const AV_ER_WRONG_ACCPWD_LENGTH: i32 = -20024;
pub const MAX_DEFAULT_IOTC_SESSION_NUMBER: u32 = 128;
pub const IOTC_MAX_PACKET_SIZE: u32 = 1400;
pub const MAX_CHANNEL_NUMBER: u32 = 32;
pub const IOTC_SESSION_ALIVE_TIMEOUT: u32 = 15;
pub const IOTC_ER_NoERROR: u32 = 0;
pub const IOTC_ER_SERVER_NOT_RESPONSE: i32 = -1;
pub const IOTC_ER_FAIL_RESOLVE_HOSTNAME: i32 = -2;
pub const IOTC_ER_ALREADY_INITIALIZED: i32 = -3;
pub const IOTC_ER_FAIL_CREATE_MUTEX: i32 = -4;
pub const IOTC_ER_FAIL_CREATE_THREAD: i32 = -5;
pub const IOTC_ER_FAIL_CREATE_SOCKET: i32 = -6;
pub const IOTC_ER_FAIL_SOCKET_OPT: i32 = -7;
pub const IOTC_ER_FAIL_SOCKET_BIND: i32 = -8;
pub const IOTC_ER_UNLICENSE: i32 = -10;
pub const IOTC_ER_LOGIN_ALREADY_CALLED: i32 = -11;
pub const IOTC_ER_NOT_INITIALIZED: i32 = -12;
pub const IOTC_ER_TIMEOUT: i32 = -13;
pub const IOTC_ER_INVALID_SID: i32 = -14;
pub const IOTC_ER_UNKNOWN_DEVICE: i32 = -15;
pub const IOTC_ER_FAIL_GET_LOCAL_IP: i32 = -16;
pub const IOTC_ER_LISTEN_ALREADY_CALLED: i32 = -17;
pub const IOTC_ER_EXCEED_MAX_SESSION: i32 = -18;
pub const IOTC_ER_CAN_NOT_FIND_DEVICE: i32 = -19;
pub const IOTC_ER_CONNECT_IS_CALLING: i32 = -20;
pub const IOTC_ER_SESSION_CLOSE_BY_REMOTE: i32 = -22;
pub const IOTC_ER_REMOTE_TIMEOUT_DISCONNECT: i32 = -23;
pub const IOTC_ER_DEVICE_NOT_LISTENING: i32 = -24;
pub const IOTC_ER_CH_NOT_ON: i32 = -26;
pub const IOTC_ER_FAIL_CONNECT_SEARCH: i32 = -27;
pub const IOTC_ER_MASTER_TOO_FEW: i32 = -28;
pub const IOTC_ER_AES_CERTIFY_FAIL: i32 = -29;
pub const IOTC_ER_SESSION_NO_FREE_CHANNEL: i32 = -31;
pub const IOTC_ER_TCP_TRAVEL_FAILED: i32 = -32;
pub const IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED: i32 = -33;
pub const IOTC_ER_CLIENT_NOT_SECURE_MODE: i32 = -34;
pub const IOTC_ER_CLIENT_SECURE_MODE: i32 = -35;
pub const IOTC_ER_DEVICE_NOT_SECURE_MODE: i32 = -36;
pub const IOTC_ER_DEVICE_SECURE_MODE: i32 = -37;
pub const IOTC_ER_INVALID_MODE: i32 = -38;
pub const IOTC_ER_EXIT_LISTEN: i32 = -39;
pub const IOTC_ER_NO_PERMISSION: i32 = -40;
pub const IOTC_ER_NETWORK_UNREACHABLE: i32 = -41;
pub const IOTC_ER_FAIL_SETUP_RELAY: i32 = -42;
pub const IOTC_ER_NOT_SUPPORT_RELAY: i32 = -43;
pub const IOTC_ER_NO_SERVER_LIST: i32 = -44;
pub const IOTC_ER_DEVICE_MULTI_LOGIN: i32 = -45;
pub const IOTC_ER_INVALID_ARG: i32 = -46;
pub const IOTC_ER_NOT_SUPPORT_PE: i32 = -47;
pub const IOTC_ER_DEVICE_EXCEED_MAX_SESSION: i32 = -48;
#[doc = " Used by AV clients to tell AV servers to change the time interval"]
#[doc = " of sending packets by avSendFrameData() when AV clients are too slow"]
#[doc = " to handle frame data."]
pub const AVIOCtrlType_IOTYPE_INNER_SND_DATA_DELAY: AVIOCtrlType = 255;
#[doc = " The starting enum value of user defined IO types. It is suggested"]
#[doc = " to assign this to the first one of user defined types, like <br>"]
#[doc = " enum IOTYPE_USER_DEFINED { <br>"]
#[doc = " IOTYPE_USER_PLAY = IOTYPE_USER_DEFINED_START, <br>"]
#[doc = " IOTYPE_USER_STOP <br>"]
#[doc = " }"]
pub const AVIOCtrlType_IOTYPE_USER_DEFINED_START: AVIOCtrlType = 256;
#[doc = " \\details The types for AV IO control. AV IO control are used\tfor AV servers"]
#[doc = "\t\t\tand AV clients to communicate control message with each other."]
#[doc = "\t\t\tThe types contains system defined types and user defined ones."]
#[doc = "\t\t\tThe range of system defined\ttypes is from 0x00 to 0xFF, while"]
#[doc = "\t\t\tuser defined ones is starting from 0x100."]
pub type AVIOCtrlType = ::std::os::raw::c_uint;
pub const _AV_RESET_TARGET_RESET_VIDEO: _AV_RESET_TARGET = 0;
pub const _AV_RESET_TARGET_RESET_AUDIO: _AV_RESET_TARGET = 1;
pub const _AV_RESET_TARGET_RESET_ALL: _AV_RESET_TARGET = 2;
pub type _AV_RESET_TARGET = ::std::os::raw::c_uint;
pub use self::_AV_RESET_TARGET as AV_RESET_TARGET;
#[doc = " \\details The prototype of authentication function used for an AV server."]
#[doc = "\t\t\tThe authentication function is set when an AV server starts by avServStart2()."]
#[doc = "\t\t\tThe AV server will call back authentication function when an AV"]
#[doc = "\t\t\tclient wants to connect with szViewAccount and szViewAccount"]
#[doc = " \\param szViewAccount [in] The view account provided by AV clients for authentication"]
#[doc = " \\param szViewPassword [in] The view password provided by AV clients for authentication"]
#[doc = ""]
#[doc = " \\return true if authentication passes and false if fails."]
#[doc = ""]
pub type authFn = ::std::option::Option<
    unsafe extern "C" fn(
        szViewAccount: *mut ::std::os::raw::c_char,
        szViewPassword: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    #[doc = " \\brief Get the version of AV module"]
    #[doc = ""]
    #[doc = " \\details This function returns the version of AV module."]
    #[doc = ""]
    #[doc = " \\return The version of AV module from high byte to low byte, for example,"]
    #[doc = "\t\t\t0x01020304 means the version is 1.2.3.4"]
    #[doc = ""]
    #[doc = " \\see IOTC_Get_Version(), RDT_GetRDTApiVer()"]
    pub fn avGetAVApiVer() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reset the Video or Audio buffer of AV server"]
    #[doc = ""]
    #[doc = " \\details This function returns AV_ER_NoERROR if no error"]
    #[doc = ""]
    #[doc = " \\param avIndex [in] The target avIndex"]
    #[doc = " \\param eTarget [in] Reset type could be RESET_VDEIO, RESET_AUDIO, RESET_ALL"]
    #[doc = " \\param Timeout_ms [in] The timeout value in ms to execute this function, set value 0 to wait forever"]
    #[doc = ""]
    #[doc = " \\return This function returns AV_ER_NoERROR if no error"]
    #[doc = ""]
    pub fn avServResetBuffer(
        avIndex: ::std::os::raw::c_int,
        eTarget: AV_RESET_TARGET,
        Timeout_ms: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Initialize AV module"]
    #[doc = ""]
    #[doc = " \\details This function is used by AV servers or AV clients to initialize AV"]
    #[doc = "\t\t\tmodule and shall be called before any AV module related function"]
    #[doc = "\t\t\tis invoked."]
    #[doc = ""]
    #[doc = " \\param nMaxChannelNum [in] The max number of AV channels. If it is"]
    #[doc = "\t\t\tspecified less than 1, AV will set max number of AV channels as 1."]
    #[doc = ""]
    #[doc = " \\return The actual maximum number of AV channels to be set."]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    pub fn avInitialize(nMaxChannelNum: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Deinitialize AV module"]
    #[doc = ""]
    #[doc = " \\details This function will deinitialize AV module."]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if deinitialize successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED the AV module is not initialized yet"]
    #[doc = ""]
    #[doc = " \\attention AV module shall be deinitialized before IOTC module is"]
    #[doc = "\t\t\t\tdeinitialized."]
    pub fn avDeInitialize() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Start an AV server"]
    #[doc = ""]
    #[doc = " \\details Start an AV server with predefined view account and password."]
    #[doc = "\t\t\tAny AV client wanting to connect with this AV server shall"]
    #[doc = "\t\t\tprovide matched view account and password."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to start AV server"]
    #[doc = " \\param cszViewAccount [in] The predefined view account"]
    #[doc = " \\param cszViewPassword [in] The predefined view password"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of second"]
    #[doc = "\t\t\t\t\t\tSpecify it as 0 will make AV server start process return"]
    #[doc = "\t\t\t\t\t\tuntil an AV client connects successfully."]
    #[doc = " \\param nServType [in] The user-defined service type. An AV client will get"]
    #[doc = "\t\t\t\t\t\tthis value when it invokes avClientStart() successfully."]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to start AV server"]
    #[doc = ""]
    #[doc = " \\return AV channel ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The IOTC session ID is incorrect or reuse of IOTC session ID"]
    #[doc = "and IOTC channel ID."]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED AV module is not initialized yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_CHANNEL The number of AV channels has reached maximum"]
    #[doc = "\t\t\t- #AV_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_SERVER_EXIT Users stop this function with avServExit() in another thread"]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\tAV start is performed completely"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avServStart2(), avServExit(), avServStop()"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process.<br><br>"]
    #[doc = "\t\t\t\t(2) The IOTC channel of\tspecified channel ID will be turned on automatically"]
    #[doc = "\t\t\t\tby avServStart()"]
    #[doc = ""]
    pub fn avServStart(
        nIOTCSessionID: ::std::os::raw::c_int,
        cszViewAccount: *const ::std::os::raw::c_char,
        cszViewPassword: *const ::std::os::raw::c_char,
        nTimeout: ::std::os::raw::c_uint,
        nServType: ::std::os::raw::c_uint,
        nIOTCChannelID: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
